--- a/ProyectoETNA/ProyectoETNA/Web.config
+++ b/ProyectoETNA/ProyectoETNA/Web.config
@@ -42,6 +42,13 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+    <authorization>
+      <deny users="?"/>
+      <allow users="*"/>
+    </authorization>
+    <authentication mode="Forms">
+      <forms name="AccETNA" loginUrl="frmLogin.aspx" timeout="2880" protection="All" defaultUrl="frmBienvenida.aspx" path="/"/>
+    </authentication>
   </system.web>
 
 </configuration>
