--- a/ProyectoETNA/ProyectoETNA/ETNA.WebSite.csproj
+++ b/ProyectoETNA/ProyectoETNA/ETNA.WebSite.csproj
@@ -80,6 +80,7 @@
     <Content Include="img\bateria.png" />
     <Content Include="img\bienvenida.jpg" />
     <Content Include="img\logo.png" />
+    <Content Include="img\user.png" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery-1.11.3.min.js" />
