--- a/ProyectoETNA/ETNA.BusinessLogic/ETNA.BusinessLogic.csproj
+++ b/ProyectoETNA/ETNA.BusinessLogic/ETNA.BusinessLogic.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MovimientosAlmacenBL.cs" />
     <Compile Include="MovimientosAlmacenDetalleBL.cs" />
     <Compile Include="ProgramacionInventarioBL.cs" />
+    <Compile Include="ReposicionStockBL.cs" />
     <Compile Include="TipoBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioAlmacenBL.cs" />
