--- a/ProyectoETNA/ProyectoETNA/ETNA.WebSite.csproj
+++ b/ProyectoETNA/ProyectoETNA/ETNA.WebSite.csproj
@@ -72,6 +72,21 @@
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\font-awesome.css" />
     <Content Include="css\font-awesome.min.css" />
+    <Content Include="css\images\animated-overlay.gif" />
+    <Content Include="css\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="css\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="css\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="css\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="css\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="css\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="css\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="css\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="css\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="css\images\ui-icons_222222_256x240.png" />
+    <Content Include="css\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="css\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="css\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="css\images\ui-icons_ffffff_256x240.png" />
     <Content Include="css\jquery-ui-1.10.4.custom.css" />
     <Content Include="css\jquery-ui-1.10.4.custom.min.css" />
     <Content Include="css\login.css" />
@@ -105,26 +120,9 @@
     <Content Include="Logistica\frmReposicionStock.js" />
     <Content Include="Logistica\frmTomaInventario.aspx" />
     <Content Include="Logistica\frmTomaInventario.js" />
-    <Content Include="SQL\documento_sp.sql" />
-    <Content Include="SQL\general_sp.sql" />
-    <Content Include="SQL\integridad.sql" />
-    <Content Include="SQL\inventario_sp.sql" />
-    <Content Include="SQL\script.sql" />
-    <Content Include="SQL\script_data.sql" />
-    <Content Include="SQL\script_datos_stock_producto.sql" />
-    <Content Include="SQL\script_stock_producto.sql" />
-    <Content Include="SQL\SP_AJUSTAR_INVENTARIO.sql" />
-    <Content Include="SQL\SP_DOCUMENTOPENDIENTE_LISTAR.sql" />
-    <Content Include="SQL\SP_EDITAR_DETALLEMOVIMIENTO.sql" />
-    <Content Include="SQL\SP_GUARDAR_DETALLEMOVIMIENTO.sql" />
-    <Content Include="SQL\SP_OBTENER_DETALLEMOVIMIENTOS.sql" />
-    <Content Include="SQL\SP_OBTENER_DOCUMENTOPENDIENTE.sql" />
-    <Content Include="SQL\SP_OBTENER_STOCKPRODUCTOS.sql" />
-    <Content Include="SQL\stored_procedures_2905.sql" />
+    <Content Include="SQL\datos.sql" />
+    <Content Include="SQL\procedimientos.sql" />
     <Content Include="SQL\tablas.sql" />
-    <Content Include="SQL\tablas_datos.sql" />
-    <Content Include="SQL\tablas_datos_2905.sql" />
-    <Content Include="SQL\Update.sql" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -204,7 +202,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="SQL\backup_etna.bak" />
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
